Make sure font size isn't what make the grid too large

--- a/puzzle.css
+++ b/puzzle.css
@@ -77,7 +77,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 4vw;
+    font-size: 3vw;
     aspect-ratio: 1 / 1;
     /* Ensure each cell is square */
     user-select: none;
